--- a/client/src/components/textbox/Textbox.css
+++ b/client/src/components/textbox/Textbox.css
@@ -24,14 +24,14 @@
     color: rgba(0, 0, 0, 1);
   }
   
-  .textboxClass {
+  .textbox {
     font-family: Atkinson Hyperlegible;
     font-size: 16px;
     font-weight: 400;
     line-height: 25.6px;
     text-align: left;
-    width: Hug (365px)px;
-    height: Fixed (52px)px;
+    width: 365px;
+    height: 52px;
     top: 40px;
     left: -0.25px;
     padding: 8px 0px 0px 0px;
@@ -39,23 +39,52 @@
     border-radius: 8px;
     opacity: 0px;
     background: rgba(252, 252, 252, 1);
-    transition: border-color 0.3s;
     border: 1px solid rgba(7, 18, 75, 1);
     text-align: justify;
     padding: 0px 8px;
     color: rgba(120, 120, 120, 1);
-
   }
 
   .textbox-focus {
-    border: 2px solid;
-    border-image-source: linear-gradient(0deg, #07124B, #07124B);
+    font-family: Atkinson Hyperlegible;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25.6px;
+    text-align: left;
+    width: 365px;
+    height: 52px;
+    top: 40px;
+    left: -0.25px;
+    padding: 8px 0px 0px 0px;
+    gap: 8px;
+    border-radius: 8px;
+    opacity: 0px;
+    background: rgba(252, 252, 252, 1);
+    border: 2px solid rgba(7, 18, 75, 1);
+    text-align: justify;
+    padding: 0px 8px;
+    color: rgba(120, 120, 120, 1);
   }
   
   .textbox-error {
-    border-color: #ff0000;
+    border-color: rgba(176, 55, 55, 1);
     color: rgba(0, 0, 0, 1);
-
+    font-family: Atkinson Hyperlegible;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25.6px;
+    text-align: left;
+    width: 365px;
+    height: 52px;
+    top: 40px;
+    left: -0.25px;
+    padding: 8px 0px 0px 0px;
+    gap: 8px;
+    border-radius: 8px;
+    opacity: 0px;
+    background: rgba(252, 252, 252, 1);
+    text-align: justify;
+    padding: 0px 8px;
   }
   
   .textbox-error-message {
