--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,70 +1,78 @@
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  
-  .navbar {
-    width: 100%;
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-  }
-  
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+.navbar {
+  width: 100%;
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  height: 100px;
+  display: flex;
+  align-items: center;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 0 20px;
+}
+
+.navbar-logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo-image {
+  height: 200px;
+  width: auto;
+}
+
+.navbar-menu {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-item {
+  margin-left: 20px;
+}
+
+.navbar-link {
+  color: #050E3C;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.navbar-link:hover {
+  color: #a9a9a9;
+}
+
+@media screen and (max-width: 768px) {
   .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 14px 20px;
+    flex-direction: column;
+    align-items: flex-start;
   }
-  
-  .navbar-logo {
-    color: #fff;
-    font-size: 24px;
-    text-decoration: none;
-  }
-  
+
   .navbar-menu {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
+    flex-direction: column;
+    width: 100%;
   }
-  
+
   .navbar-item {
-    margin-left: 20px;
+    margin-left: 0;
+    width: 100%;
   }
-  
+
   .navbar-link {
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
+    padding: 10px;
+    width: 100%;
+    text-align: left;
   }
-  
-  .navbar-link:hover {
-    color: #ddd;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .navbar-container {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .navbar-menu {
-      flex-direction: column;
-      width: 100%;
-    }
-  
-    .navbar-item {
-      margin-left: 0;
-      width: 100%;
-    }
-  
-    .navbar-link {
-      padding: 10px;
-      width: 100%;
-      text-align: left;
-    }
-  }
+}
