--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -7,7 +7,7 @@ html, body {
   }
   
   .footer {
-    background-color: #222;
+    background-color: #050E3C;
     color: #fff;
     text-align: center;
     padding: 20px 0;
@@ -41,7 +41,7 @@ html, body {
   
   .icon-link:hover {
     transform: scale(1.1);
-    color: black;
+    color: #aeaeae;
   }
   
   .footer-icon {
