fix:actionBUtton y warning

--- a/client/src/components/formularioModulos/formularioModulo.css
+++ b/client/src/components/formularioModulos/formularioModulo.css
@@ -45,4 +45,10 @@
   .selected {
     border: 2px solid rgb(0, 0, 0); 
   }
+  .warning {
+    color: red; /* Cambia el color según tus necesidades */
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
   
