--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -1,7 +1,7 @@
 .fondo{
-    margin: 0;
+    margin: auto;
     padding: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    /* object-fit:cover; */
 }
