--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -1,7 +1,26 @@
-.fondo{
-    margin: auto;
+body, html {
+    margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
-    /* object-fit:cover; */
-}
+  }
+  
+  .fondo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 90%;
+    object-fit: cover;
+    z-index: -1; /* Asegura que la imagen esté detrás de otros contenidos */
+  }
+  
+  /* Media Query para dispositivos móviles */
+  @media (max-width: 768px) {
+    .fondo {
+      position: relative;
+      width: 100%;
+      height: auto;
+    }
+  }
+  
