--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -10,10 +10,9 @@
   top: 0;
   left: 0;
   z-index: 1000;
-  height: 100px;
+  height: 83px;
   display: flex;
   align-items: center;
-  overflow: hidden;
   padding: 0;
 }
 
@@ -24,6 +23,7 @@
   width: 100%;
   padding: 0 20px;
   box-sizing: border-box;
+  position: relative;
 }
 
 .logo-wrapper {
@@ -38,7 +38,7 @@
 }
 
 .logo-image {
-  height: 150px;
+  height: 156px;
   width: auto;
   object-fit: contain;
 }
@@ -97,14 +97,8 @@
   margin-right: 5px;
   height: 40px;
   width: auto;
-  border-top-width: 1px;
-  border-bottom-width: 1px;
-  border-left-width: 1px;
-  border-right-width: 1px;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border: 1px solid #000;
+  border-radius: 4px;
 }
 
 .navbar-item button:hover {
@@ -122,26 +116,98 @@
   font-size: 14px;
 }
 
-@media screen and (max-width: 768px) {
+.navbar-toggle {
+  display: none;
+  align-items: center;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.navbar-toggle-icon {
+  width: 25px;
+  height: 3px;
+  background-color: #000;
+  transition: transform 0.3s;
+  position: relative;
+  display: flex;
+}
+
+.navbar-toggle-icon::before,
+.navbar-toggle-icon::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 3px;
+  background-color: #000;
+  transition: transform 0.3s;
+}
+
+.navbar-toggle-icon::before {
+  transform: translateY(-8px);
+}
+
+.navbar-toggle-icon::after {
+  transform: translateY(8px);
+}
+
+.navbar-toggle.active .navbar-toggle-icon {
+  transform: rotate(45deg);
+}
+
+.navbar-toggle.active .navbar-toggle-icon::before {
+  transform: translateY(0) rotate(90deg);
+}
+
+.navbar-toggle.active .navbar-toggle-icon::after {
+  transform: translateY(0) rotate(-90deg);
+}
+
+@media screen and (max-width: 1334px) {
   .navbar-container {
-    flex-direction: column;
-    align-items: flex-start;
+    justify-content: space-between;
+    padding: 10px;
   }
 
   .navbar-menu {
-    flex-direction: column;
+    display: none;
+    position: absolute;
+    top: 72%;
+    left: 0;
+    background-color: #fff;
     width: 100%;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
+    z-index: 999;
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .navbar-menu.active {
+    display: flex;
   }
 
   .navbar-item {
-    margin-left: 0;
     width: 100%;
-    margin-top: 10px;
+    margin: 0;
+    padding: 10px;
   }
 
-  .navbar-link {
+  .navbar-logo {
+    margin-right: auto;
+  }
+
+  .navbar-toggle {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
     padding: 10px;
-    width: 100%;
-    text-align: left;
+  }
+
+  .contact-button,
+  .register-button {
+    display: flex;
+    font-size: 14px;
+    margin: 0;
+    background-color: #fff;
+    color: #000;
   }
 }
