--- a/client/src/components/barraProgreso/BarraProgreso.css
+++ b/client/src/components/barraProgreso/BarraProgreso.css
@@ -1,8 +1,8 @@
 .progress-bar-container-pack  {
     display: flex;
     align-items: center;
-    margin-bottom: 2rem;
-    margin-left: 10px; 
+    justify-content: center;
+
 }
 
 .progress-bar-pack  {
