fix css del formulario, boton de atras y barra progreso

--- a/client/src/components/barraProgreso/BarraProgreso.css
+++ b/client/src/components/barraProgreso/BarraProgreso.css
@@ -1,7 +1,8 @@
 .progress-bar-container-pack  {
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-content: center;
+
 
 }
 
