--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -4,6 +4,15 @@ body, html {
     width: 100%;
     height: 100%;
   }
+  .home {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  }
+  
+  .navbar, .noti {
+    flex: 1;
+  }
   
   .fondo {
     position: absolute;
