--- a/client/src/components/noti/noti.css
+++ b/client/src/components/noti/noti.css
@@ -1,45 +1,20 @@
-  .noti{
+.noti {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: var(--gap-3xl);
-    padding: var(--padding-lg) var(--padding-xl);
-    box-sizing: border-box; 
-  }
-  
-  .hero {
-    display: flex;
     align-items: flex-start;
+    justify-content: center;
+    padding: 18px 20px;
+    box-sizing: border-box;
     max-width: 100%;
     align-self: stretch;
-    background-color: var(--main);
+    background-color: #fefdfa;
     color: black;
     overflow: hidden;
-    flex-direction: row;
-    justify-content: center;
-    padding: var(--padding-lg) var(--padding-xl) var(--padding-mid)
-      var(--padding-2xl);
-    box-sizing: border-box;
-  }
-
-  .hero-content-parent {
-    width: 1185px;
-    flex-direction: row;
+    width: 100%;
     justify-content: space-between;
-    gap: var(--gap-xl);
-    display: flex;
-    align-items: flex-start;
-    max-width: 100%;
-  }  
-  .hero-content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    padding: var(--padding-7xs) 0 0;
-    box-sizing: border-box;
-    max-width: 100%;
+    gap: 20px;
+    padding-top: 6px;
+    padding-bottom: 0;
   }
 
   .da-el-primer-container {
