--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -5,7 +5,7 @@
 
 .navbar {
   width: 100%;
-  background-color: #fff;
+  background-color: #07124B;
   position: fixed;
   top: 0;
   left: 0;
@@ -38,7 +38,7 @@
 }
 
 .logo-image {
-  height: 156px;
+  height: 180px;
   width: auto;
   object-fit: contain;
 }
@@ -69,7 +69,7 @@
 }
 
 .navbar-link {
-  color: #000;
+  color: #fff;
   text-decoration: none;
   font-size: 16px;
   display: inline-block;
@@ -81,7 +81,7 @@
   width: 0px;
   height: 2px;
   display: block;
-  background: black;
+  background: #fff;
   transition: 300ms;
 }
 
@@ -90,30 +90,26 @@
 }
 
 .navbar-link:hover {
-  color: #000;
+  color: #fff;
 }
 
-.navbar-item button {
+.accede-button {
+  background-color: #59FFC9;
+  color: #07124B;
   margin-right: 5px;
   height: 40px;
   width: auto;
-  border: 1px solid #000;
+  border: 1px solid #07124B;
   border-radius: 4px;
-}
-
-.navbar-item button:hover {
-  border-color: #000;
-  background-color: #fff;
-  color: #000;
-}
-
-.contact-button {
   font-size: 14px;
-  margin-left: 24px;
+  margin-right: 100px;
 }
 
-.register-button {
-  font-size: 14px;
+.accede-button:hover {
+  border-color: #fff;
+  background-color: transparent;
+  color: #fff;
+  transition: 0.3s;
 }
 
 .navbar-toggle {
@@ -126,7 +122,7 @@
 .navbar-toggle-icon {
   width: 25px;
   height: 3px;
-  background-color: #000;
+  background-color: #fff;
   transition: transform 0.3s;
   position: relative;
   display: flex;
@@ -138,7 +134,7 @@
   position: absolute;
   width: 25px;
   height: 3px;
-  background-color: #000;
+  background-color: #fff;
   transition: transform 0.3s;
 }
 
@@ -202,12 +198,30 @@
     padding: 10px;
   }
 
-  .contact-button,
-  .register-button {
+  .accede-button {
     display: flex;
     font-size: 14px;
     margin: 0;
     background-color: #fff;
-    color: #000;
+    color: #07124B;
+    height: 35px;
+    width: auto;
+  }
+
+  .accede-button:hover {
+    display: flex;
+    font-size: 14px;
+    margin: 0;
+    background-color: #fff;
+    color: #07124B;
+  }
+
+
+  .navbar-link {
+    color: #07124B;
+  }
+
+  .navbar-link:hover {
+    color: #07124B;
   }
 }
