estilos done, colocado abajo, falta responsive

--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -21,8 +21,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
-  bottom: 0;
+  position: absolute;
+  bottom: -530px;
   left: 0;
   right: 0;
 }
