--- a/client/src/components/noti/noti.css
+++ b/client/src/components/noti/noti.css
@@ -1,37 +1,51 @@
-.noti {
+.noti-container { 
+    z-index: 1000;
+    position: fixed;
+    top: 83px;
+    left: 0;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    display: flex;
     align-items: flex-start;
     justify-content: center;
     padding: 18px 20px;
-    box-sizing: border-box;
-    max-width: 100%;
-    align-self: stretch;
-    background-color: #fefdfa;
-    color: black;
-    overflow: hidden;
-    width: 100%;
-    justify-content: space-between;
-    gap: 20px;
-    padding-top: 6px;
-    padding-bottom: 0;
-  }
-
-  .da-el-primer-container {
-    height: 13px;
-    position: relative;
-    line-height: 160%;
-    display: inline-block;
-    white-space: nowrap;
+    background-color: rgba(142, 149, 184, 0.7);
+    color: #091864;
   }
 
   .aqui {
     text-decoration: underline;
+    display: inline-block;
+    color: #091864;
   }
-  
+  .aqui:after{
+    content: "";
+    color: #091864;
+  }
+.aqui:hover:after{
+    color: #091864;
+}
+.aqui:hover{
+    color: #091864;
+}
+
+  .da-el-primer-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    height: 25px;
+    position: relative;
+    line-height: 160%;
+    display: inline-block;
+
+}
   .arrowleft-icon {
     height: 25px;
-    width: 29px;
-    position: relative;
+    width: 25px;
+    position:fixed; 
+    right: 15%;
   }
 
