--- a/client/src/components/comienzo/Comienzo.css
+++ b/client/src/components/comienzo/Comienzo.css
@@ -5,8 +5,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 100vh;
-    width: 100vw;
+    height: 705px;
+    width: 100%;
     background-image: url('./comienzo.jpeg');
     background-size: cover; 
     background-position: center; 
