--- a/client/src/components/descubre/Descubre.css
+++ b/client/src/components/descubre/Descubre.css
@@ -4,7 +4,8 @@
     justify-content: center;
     align-items: center;
     height: 354px;
-    margin-left: 131px;
+    margin: auto;
+    margin-bottom: 100px ;
 }
 
 /* Estilos para el contenedor de la sección "descubre" */
