--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -7,8 +7,9 @@ html, body {
 }
 
 body {
-  position: relative;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .footer {
@@ -21,10 +22,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: absolute;
-  bottom: -530px;
-  left: 0;
-  right: 0;
+  margin-top: auto; /* This pushes the footer to the bottom */
 }
 
 .footer-content {
@@ -168,7 +166,7 @@ body {
     margin-left: -80px;
   }
 
-  .policy-text{
+  .policy-text {
     font-size: 8px;
     margin: 0;
     display: flex;
