--- a/client/src/components/noti/noti.css
+++ b/client/src/components/noti/noti.css
@@ -1,51 +1,63 @@
 .noti-container { 
-    z-index: 1000;
-    position: fixed;
-    top: 83px;
-    left: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    padding: 18px 20px;
-    background-color: rgba(142, 149, 184, 0.7);
-    color: #091864;
+  z-index: 1000;
+  position: fixed;
+  height: 60px;
+  top: 83px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  background-color: rgba(142, 149, 184, 0.7);
+  color: #091864;
   }
 
-  .aqui {
-    text-decoration: underline;
-    display: inline-block;
-    color: #091864;
-  }
-  .aqui:after{
-    content: "";
-    color: #091864;
-  }
+.da-el-primer-container {
+  display: flex;
+  top: 15px;
+  left: -310px;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  height: 25px;
+  position: relative;
+  line-height: 160%;
+  display: inline-block;
+
+}
+
+.aqui {
+  text-decoration: underline;
+  display: inline-block;
+  color: #091864;
+}
+
+.aqui:after{
+  content: "";
+  color: #091864;
+}
+
 .aqui:hover:after{
-    color: #091864;
+  color: #091864;
 }
+
 .aqui:hover{
-    color: #091864;
+  color: #091864;
 }
 
-  .da-el-primer-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    height: 25px;
-    position: relative;
-    line-height: 160%;
-    display: inline-block;
-
+.close-container {
+  top: 15px;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
-  .arrowleft-icon {
-    height: 25px;
-    width: 25px;
-    position:fixed; 
-    right: 15%;
-  }
 
+.arrowleft-icon {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  color:black;
+  height: 25px;
+  width: 25px;
+}
