--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -225,3 +225,31 @@
     color: #07124B;
   }
 }
+
+@media screen and (max-width: 567px) {
+  .navbar-toggle {
+    margin-right: 20px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .navbar-toggle {
+    margin-right: 20px;
+  }
+
+  .logo-image, .logo-overlay {
+    margin-left: -100px;
+  }
+}
+
+@media screen and (max-width: 368px) {
+  .logo-image, .logo-overlay {
+    margin-left: -130px;
+  }
+}
+
+@media screen and (max-width: 334px) {
+  .logo-image, .logo-overlay {
+    margin-left: -140px;
+  }
+}
