--- a/client/src/components/timeLine/timeline.css
+++ b/client/src/components/timeLine/timeline.css
@@ -1,23 +1,57 @@
-.timeline{
+
+.timeline {
+    position: relative;
     margin-top: 83px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-}
-.modulos_container{
-    position: absolute;
-    left: 0;
-    top: 0;
     display: flex;
     flex-direction: column;
-    margin-top: 83px;
-    margin-bottom: 83px;
+    align-items: center;
     width: 100%;
-    height: 100%;
-}
-.modulo_card{
-    width: 200px;
-    height: 200px;
-}
+  }
+  
+  .timeline-line {
+    position: absolute;
+    left: 10%;
+    top: 150px;
+    bottom: 0;
+    width: 8px;
+    background-color: #07124B;
+  }
+  
+  .timeline-phases {
+    margin-top: 150px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  
+  .modulo-card {
+    /* Tus estilos existentes */
+    position: relative;
+    margin-left: 25%;
+  }
+  
+  .modulo-card::before {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    content: 'Te recomendamos';
+    color: aliceblue;
+    position: absolute;
+    left: -26%;
+    top: 50%;
+    width: 150px;
+    height: 40px;
+    background-color: #07124B;
+    border-radius: 15px;
+    transform: translateY(-50%);
+  }
+  
+  .phase-title {
+    position: absolute;
+    left: 15%;
+    top: 50%;
+    transform: translateY(-50%);
+    font-weight: bold;
+    color: #003366;
+  }
