--- a/client/src/components/consultoria/beneficios/Beneficios.css
+++ b/client/src/components/consultoria/beneficios/Beneficios.css
@@ -2,8 +2,7 @@
     padding: 20px;
     text-align: center;
     font-size: 20px;
-    border-width: 2px 0; /* Solo arriba y abajo */
-    border-style: solid; /* Tipo de borde */
+    border-width: 2px; /* Solo arriba y abajo */
     border-color: #223D3C; /* Color del borde */
     margin-bottom: 2rem;
 }
@@ -27,16 +26,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-top: 2px solid #223D3C;
-    border-bottom: 2px solid #223D3C;
+    border: 2px solid #00000069;
     margin-bottom: 2rem;
     background-color: #ffffff;
-    max-width: 300px;
-    min-height: 400px;
+    max-width: 371px;
+    min-height: 259px;
     margin: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 17px;
 }
-
-.cardBeneficios :hover{
-    padding: 15px;
-  }
