--- a/client/src/components/scrollButton/ScrollButton.css
+++ b/client/src/components/scrollButton/ScrollButton.css
@@ -1,15 +1,17 @@
 .scroll-button {
-    margin-top: auto;
     width: 100%;
     left: 50%;
     bottom: 150px;
     height: 50px;
     font-size: 2rem;
-    z-index: 1;
+    z-index: 999;
+    position: absolute;
+    transform: translateX(-50%);
     cursor: pointer;
     color: #050E3C;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #fff;
+    margin-top: auto;
   }
