--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,6 +32,7 @@ body {
   background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
   background-position: center; /* Centra la imagen en el fondo */
   background-repeat: no-repeat;
+  z-index: -100;
 }
 
 h1 {
