--- a/client/src/components/panelUsuario/panelUsuario.css
+++ b/client/src/components/panelUsuario/panelUsuario.css
@@ -25,7 +25,7 @@
     font-size: 2rem;
 }
 
-.favoritos{
+.contratar{
     display: block;
     list-style: none;
     padding: 0;
@@ -33,7 +33,7 @@
 
 }
 
-.favoritos__buttons{
+.contratar__buttons{
     display: flex;
     justify-content: space-around;
     align-items: center;
