--- a/client/src/components/consultoria/herramientas/Herramientas.css
+++ b/client/src/components/consultoria/herramientas/Herramientas.css
@@ -1,21 +1,19 @@
 .herramientasContainer {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+  border-width: 2px; /* Solo arriba y abajo */
+  border-color: #223D3C; /* Color del borde */
+  margin-bottom: 2rem;
   }
   
-  .herramientaContainer {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
+  .herramientaContainer {    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    max-width: 1200px;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+    /* padding: 20px; */
   }
   
   .herramienta {
