feat: los formularios muestran las opciones delecionadas y no permiten el envio

--- a/client/src/components/formularioPack/formularioPack.css
+++ b/client/src/components/formularioPack/formularioPack.css
@@ -100,4 +100,7 @@ background-color: #e0e0e0;
   margin-bottom: 10px;
 }
 
-
+.answers-pack button.selected {
+  background-color: #e0e0e0;
+  border: 3px solid #000000;
+}
