--- a/client/src/components/packs/packList.css
+++ b/client/src/components/packs/packList.css
@@ -1,4 +1,4 @@
-.packsMain {
+/* .packsMain {
     height: 500px;
     width: 100%;
     padding-bottom: 100px;
@@ -31,8 +31,69 @@
     height: 500px;
     width: 50%;
     flex-direction: row;
-}
-/* .pack1{
-    width: 300px;
-    height: 300px;
 } */
+
+.packsMain {
+    height: 600px;
+    width: 100%;
+    padding-bottom: 100px;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+}
+
+.packs_container {
+    flex: 1;
+    max-width: 300px;
+    margin-right: 20px; 
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    gap: 20px;
+    padding: 20px;
+    height: 600px;
+    width: 100%;
+
+}
+
+
+.packs_info {
+    border-radius: 8px;
+    padding: 20px;
+    height: 600px;
+    width: 60%;
+    display: flex;
+}
+
+.packs_info .pack-card-content {
+    padding: 20px;
+}
+
+.packs_info .card-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.packs_info p {
+    margin: 10px 0;
+}
+
+.packs_info ul {
+    list-style: none;
+    padding: 0;
+}
+
+.packs_info ul li {
+    margin-bottom: 10px;
+}
+
+.packs_info ul li::before {
+    content: '>';
+    margin-right: 5px;
+    color: #007bff;
+}
+
