--- a/client/src/components/packs/packList.css
+++ b/client/src/components/packs/packList.css
@@ -1,38 +1,3 @@
-/* .packsMain {
-    height: 500px;
-    width: 100%;
-    padding-bottom: 100px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 20px;
-}
-
-.packs_container {
-    display: flex;
-    flex-direction: column;
-    justify-content:flex-start;
-    gap: 20px;
-    padding: 20px 0 20px 80px;
-    height: 200px;
-    width: fit-content;
-}
-
-.packs_container > div {
-    flex: 1;
-}
-
-.packs_info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    border: 1px solid black;
-
-    height: 500px;
-    width: 50%;
-    flex-direction: row;
-} */
-
 .packsMain {
     height: 600px;
     width: 100%;
@@ -58,12 +23,11 @@
 
 }
 
-
 .packs_info {
     border-radius: 8px;
     padding: 20px;
     height: 600px;
-    width: 60%;
+    width: 50%;
     display: flex;
 }
 
@@ -89,11 +53,11 @@
 
 .packs_info ul li {
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .packs_info ul li::before {
     content: '>';
     margin-right: 5px;
-    color: #007bff;
+    color: #091864;
 }
-
