FIX: some minor fixes to better performance

--- a/client/src/components/formularioModulos/formularioModulo.css
+++ b/client/src/components/formularioModulos/formularioModulo.css
@@ -64,6 +64,7 @@
 }
 
 .answers-modulo  button {
+  color:#091864;
   background-color: #ffffff;
   border: 2px solid #cccccc;
   border-radius: 10px;
