--- a/client/src/components/formularioPack/formularioPack.css
+++ b/client/src/components/formularioPack/formularioPack.css
@@ -65,6 +65,7 @@
 }
 
 .answers-pack  button {
+  color:#091864;
   background-color: #ffffff;
   border: 2px solid #cccccc;
   border-radius: 10px;
