--- a/client/src/components/consultoria/descubre/Descubre.css
+++ b/client/src/components/consultoria/descubre/Descubre.css
@@ -15,10 +15,8 @@
     align-items: center;
     width: 100%;
     max-width: 1200px;
-    background-color: #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border-radius: 17px;
-    overflow: hidden;
-    padding: 30px;
 }
 
 /* Estilos para el contenedor interno de "descubre" */
@@ -32,31 +30,24 @@
 
 /* Estilos para el texto dentro de "descubre" */
 .descubreText {
-    margin-bottom: 2rem;
+    margin-bottom: 0 0 2rem 4rem;
+    text-align: justify;
+    display: flex;
+    justify-content: justify;
+    align-items: justify;
 }
 
 .descubreText h2 {
     font-size: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 0 0 50px 10px;
     width: 272px;
     height: 37px;
-    margin-bottom: 2rem;
-    text-align: left;
-
+    text-align: justify;
+    display: flex;
+    justify-content: justify;
+    align-items: justify;
 }
-
-.descubreText p {
-    font-size: 24px;
-    color: #333;
-    margin: 0;
-    width: 414px;
-    height: 87px;
-    text-align: left;
-    margin-bottom: 2rem;
-
-    
-}
-
+ 
 /* Estilos para el botón dentro de "descubre" */
 .descubreButton {
     background-color: #07124B;
@@ -67,6 +58,7 @@
     border-radius: 5px;
     width: 284px;
     height: 50px;
+    margin-top: 80px;
 }
 
 /* Estilos para el contenedor de la imagen */
@@ -75,6 +67,10 @@
     justify-content: center;
     align-items: center;
     flex: 1;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 
 }
 
@@ -82,4 +78,6 @@
 .descubreImg img {
     max-width: 100%;
     height: 100%;
+    border-radius: 0 17px 17px 0;
+
 }
