--- a/client/src/components/modulosCard/moduloCard.css
+++ b/client/src/components/modulosCard/moduloCard.css
@@ -1,34 +1,50 @@
 .modulo-card {
+    display: flex;
+    align-items: center;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: row;
-    /* padding: 20px; */
+    flex-direction: column;
+    padding: 15px;
     margin-bottom: 30px;
-    margin-right: 80px;
-    /* width: 80%; */
-    min-width: 600px;
-    height: 320px;
+    min-width: 350px;
+    min-height: 70px;
+    max-width: 80%;
+    border-radius: 50px;
+    z-index: 2;
 }
 
 
 .modulo-card-content {
+    
     display: flex;
+    flex-wrap: nowrap;
     flex-direction: column;
-    width: 75%;
+    width: 90%;
 }
 
 .card-title {
-    font-size: 20px;
+    margin-left: 10px;
+    font-size: 24px;
     color: #003366;
-    margin: 0 0 10px 0;
+}
+
+.main-container-card {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
+
+.card-title::marker{
+    /* content: "> "; */
+    font-size: 35px;
 }
 
 .description {
-    font-size: 16px;
+    font-size: 22px;
     color: #666;
-    margin: 0 0 20px 0;
+    margin: 0 0 20px 10px;
 }
 
 .details {
@@ -42,7 +58,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #f5f5f5;
-    flex: 1;
+    flex: 2;
     border-radius: 10px;
     margin: 0 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -61,25 +77,21 @@
 }
 
 .detail-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 25px;
-    font-size: 1rem;
+    height: 40px;
+    font-size: 22px;
     font-weight: bold;
-    color: #000000;
+    color: #ffff;
     margin: 0 0 5px 0;
-    background-color:#318C6F ;
+    background-color:#003366 ;
     border-radius: 10px 10px 0 0;
 }
-
-.detail-content {
-    font-size: 16px;
-    color: #003366;
-    font-weight: bold;
-    margin: 0;
     
-}
 .detail-content {
-    font-size: 16px;
+    font-size: 18px;
     color: #003366;
     font-weight: bold;
     margin: 0;
@@ -106,15 +118,17 @@
 
 .learn-more-container {
     display: flex;
-    height: 100%;
-    width: 25%;
+    height: 250px;
+    width: 300px;
+    margin: 0 8px 0 0;
     align-items:flex-end;
     justify-content: center;
     background-image: url('../../../public/yayo-portatil.png'); /* Ruta de la imagen */
+    background-size: 150px;
     background-size: cover; /* Asegura que la imagen cubra todo el contenedor */
     background-position: center; /* Centra la imagen en el contenedor */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
-    border-radius: 0 10px 10px 0;
+    border-radius: 10px 10px 10px 10px;
 }
 
 
