--- a/client/src/pages/register/Register.css
+++ b/client/src/pages/register/Register.css
@@ -1,50 +1,86 @@
 /* Register.css */
 .register-login {
-  background-color: #81827C;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
   border-radius: 10px;
-  padding: 25px;
-  margin: 80px auto;
+  padding: 10px 50px;
+  margin: 20px auto 40px auto;
   width: 80%;
-  max-width: 500px;
-  min-width: 300px;
+  height: 90%;
+  /* max-height: 500px; */
+  max-width: 600px;
+  min-width: 375px;
 }
 
 .register-login h2 {
   font-size: 40px;
   margin-bottom: 30px;
-  color: #223D3C;
+  color: black;
   text-align: center;
 }
 
+.register-login p {
+  text-align: center;
+  font-size: 20px;
+}
+
 .register-login form {
-  display: flex;
-  flex-direction: column;
+  display: block;
+
+  width: 70%;
   align-items: center;
 }
 
 .register-login label {
   margin-bottom: 5px;
-  color: #F8F3F2;
+  color: #000000;
   font-weight: 600;
-  width: 100%;
+  width: 70%;
   text-align: left;
 }
 
 .register-login .input-group {
   display: flex;
+  flex-direction: column;
   align-items: center;
   width: 100%;
 }
 
 .register-login input {
-  width: 100%;
+  width: 70%;
+  height: 28px;
   padding: 8px;
   margin-bottom: 10px;
   border-radius: 4px;
-  border: 1px solid #F8F3F2;
-  background-color: #F8F3F2;
-  border-color: #F8F3F2;
+  border: 2px solid #F8F3F2;
+  background-color: #ffffff;
+  border-color: #000000;
   color: #223D3C;
+}
+
+.password-requirements {
+  color: #212121;
+  font-weight: 600;
+  width: 70%;
+  text-align: left;
+}
+
+.terms-checkbox {
+  width: 100%;
+  display: block;
+  text-align: center;
+  margin: 0 5px;
+}
+
+#terms{
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+  
+
 }
 
 .register-login button {
@@ -61,6 +97,37 @@
   width: 16px;
   margin: 0;
   padding-right: 8px;
+}
+
+.error-message {
+  display: flex;
+  text-align: center;
+  color: #07124B;
+  margin-top: 5px;
+}
+
+.aquí-button{
+  width: 100%;
+  display: flex;
+  justify-content: right;
+}
+
+.aquí-button button{
+  color: black;
+  background-color: transparent;
+  border: none;
+}
+
+.register-login-form .final-button{
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  background-color: #07124B;
+  color: #F8F3F2;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  margin: 10px auto 0px;
 }
 
 @media (max-width: 900px) {
