--- a/client/src/components/packCard/packCard.css
+++ b/client/src/components/packCard/packCard.css
@@ -19,6 +19,7 @@
   width: 50px;
   height: 50px;
   margin-right: 15px;
+  
 }
 
 .pack-card-image img {
@@ -32,11 +33,12 @@
   flex-grow: 1;
 }
 
-.card-title {
-  font-size: 18px;
+.card-titlePack {
+  font-size: 20px;
   font-weight: bold;
-  margin: 0;
+  margin-left: 10px;
   color: #333;
+  text-align:left;
 }
 
 .pack1 {
