--- a/client/src/components/formularioModulos/formularioModulo.css
+++ b/client/src/components/formularioModulos/formularioModulo.css
@@ -31,6 +31,64 @@
   font-size: 3rem;
 }
 
+.modal-phase-primero{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #07124B;
+  border-radius: 15px;
+}
+
+.modal-phase-primero h2{
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+
+}
+
+.basandonos{
+  width: 100%;
+  background-color: #07124B;
+  border: 2px solid #07124B;
+  border-radius: 15px 15px 0 0;
+}
+
+.modal-phase-h2{
+  font-size: 2.5rem;
+  font-weight: bold;
+  line-height: 90%;
+  color: #07124B;
+  padding: 2rem 0;
+  border-bottom: 3px dashed #07124B;
+
+  width: 100%;
+  text-align: center;
+}
+
+.modal-phase-name {
+  font-size: 2.2rem;
+  font-weight: bold;
+  line-height: 90%;
+  color: #07124B;
+  margin: 1rem 0;
+  width: 100%;
+  text-align: center;
+}
+
+.modal-description{
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: 90%;
+  color: #07124B;
+  margin: 2rem 0;
+  width: 100%;
+  text-align: center;
+}
+
 
 /* Es el boton de anterior por si nos dicen de ponerlo, por ahora lo muestro, para ocultarlo descomentar la linea */
 /* .button-siguiente  {
